frontend/test/should_pass/attrib_model_092.gm
enum EEE {
	EEE
}

node class AAA {
  EEE:EEE;
}

