frontend/test/should_fail/attrib_model_092.gm
enum AAA {
	e1,
	e2
}

node class AAA {
  value:AAA;
}

